upgrade singleton service to springboot3.1.1 (#2482)
* update the gradlew

* upgrade the common

* l10n upgrade springboot 3

* upgrade lit i18n

* upgrade lite

* upgrade lite i18n

* fixed part i18n

* commit the swagger

* upgrade spring boot 3

* fix swagger ui

* fixed agent issue

* fixed the other issue

* format code

* format code2

* format code3

* format code4

* format code5

* format code

* upgrade jackson

* format code